# stronk-lang

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  chunk.cpp  chunk.h  common.h  config.h.in  debug.cpp  debug.h  main.cpp  value.h
.github/workflows/: test.yml
ex/: A.cpp  A.h  B.cpp  B.h
include/: chunk.h  code_generator.h  common.h  compiler.h  debug.h  instruction.h  number_generator.h  parser.h  scanner.h  token.h  value.h  vm.h
src/: CMakeLists.txt  chunk.cpp  code_generator.cpp  compiler.cpp  debug.cpp  main.cpp  number_generator.cpp  parser.cpp  scanner.cpp  value.cpp  vm.cpp
src/backend/: CMakeLists.txt  vm.cpp
src/common/: CMakeLists.txt  instruction.cpp  number_generator.cpp  utils.cpp  value.cpp
src/compiler/: CMakeLists.txt  compiler.cpp  constant_pool.cpp
src/frontend/: CMakeLists.txt  code_generator.cpp  compiler.cpp  parser.cpp  scanner.cpp  token.cpp
src/include/backend/: vm.h
src/include/common/: common.h  instruction.h  number_generator.h  utils.h  value.h
src/include/compiler/: compiler.h  constant_pool.h
src/include/frontend/: code_generator.h  compiler.h  parser.h  scanner.h  token.h
test/: CMakeLists.txt
test/frontend/: basic_operations_test.cpp  comments_test.cpp  complex_expressions_test.cpp  global_variables_test.cpp  lexical_errors_test.cpp  scanner_tests.cpp  statements_test.cpp  string_test.cpp  syntax_errors_test.cpp
test/mock/basic_operations/: basic_associativity.stronk  basic_operations.stronk  precedence.stronk  unary_associativity.stronk
test/mock/comments/: nested_multiline_comment.stronk  single_multiline_comment.stronk  unicode.stronk
test/mock/complex_expressions/: grouping1.stronk  precedence.stronk
test/mock/global_variables/: basic_variables.stronk  overwriting_variables.stronk
test/mock/statements/: alone_if.stronk  if_basic.stronk  print_basic.stronk
test/mock/strings/: combination.stronk  escaped_characters.stronk  nested_interpolation.stronk  single_string.stronk  string_interning.stronk  string_interpolation.stronk  string_with_expression.stronk
test/mock/syntax_errors/: operation_error.stronk
test_programs/: simple.stronk
tools/shell/: CMakeLists.txt  shell.cpp
